--- a/index.html
+++ b/index.html
@@ -82,22 +82,22 @@
 
     <div class="container mt-5">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <img
             src="images/yoga.png"
             alt="Yoga time"
             class="img-fluid rounded"
           />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3 text-center">Yoga app</h2>
-          <p class="text-md-center">
+          <p class="text-md-center col-sm-12">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <button type="button" class="btn btn-primary p-3 m-2 buttonLink">
+          <button type="button" class="btn btn-primary p-3 m-2">
             Launch Yoga App
           </button>
         </div>
@@ -106,46 +106,46 @@
 
     <div class="container mt-5">
       <div class="row d-flex flex-row-reverse">
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <img
             src="images/weather.png"
             alt="Weather Forecast"
             class="img-fluid rounded"
           />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3 text-center">Weather app</h2>
-          <p class="text-md-center">
+          <p class="text-md-center col-sm-12">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <button type="button" class="btn btn-primary p-3 m-2 buttonLink">
+          <button type="button" class="btn btn-primary p-3 m-2">
             Launch Yogurt App
           </button>
         </div>
       </div>
     </div>
 
-    <div class="container">
+    <div class="container mt-5">
       <div class="row mb-4">
-        <div class="col-md-6 mb-4">
+        <div class="col-sm-6">
           <img
             src="images/yogurt.png"
             alt="Healthy food"
             class="img-fluid rounded"
           />
         </div>
-        <div class="col-6 mb-4">
-          <h2 class="mb-3 text-center">Yogurt app</h2>
-          <p class="text-md-center">
+        <div class="col-sm-6">
+          <h2 class="mt-3 mb-3 text-center">Yogurt app</h2>
+          <p class="text-md-center col-sm-12">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <button type="button" class="btn btn-primary p-3 m-2 buttonLink">
+          <button type="button" class="btn btn-primary p-3 m-2">
             Launch Yoga App
           </button>
         </div>
